--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@emotion/styled": "^11.10.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.3.6",
+    "bootstrap": "^5.2.3",
+    "formik": "^2.2.9",
     "framer-motion": "^10.12.4",
     "next": "13.3.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "tailwindcss": "3.3.1"
